Changes for 1.5:

 - added frontend-side support of quotes and triger expression validation (Eugene)
 - added availability to show negative values in graphs (Artem) 
 - developed database monitoring via ODBC (Eugene)
 - added availability to export/import templates for hosts (Artem)
 - changed how is showed messages (Artem)
 - added login/logout (Artem)

Changes for 1.4.2:

 - fixed reset button for graph (Eugene)
 - fixed item multiple cleaning on mass update (Eugene)
 - fixed error 'undefined function delete_service' (Eugene)
 - fixed internal loging system (Eugene)
 - added non-persistent connection for PostgreSQL to avoid problems with unfinished transactions (Alexei)
 - fixed housekeeper to process history_text (Alexei)
 - improved zabbix_get for receiving large data (Eugene)
 - fixed shared memory allocation (Eugene)
 - added server-side transactions for PostgreSQL (Alexei)
 - fixed housekeeper to run as multiple transations (Alexei)
 - added support of NOT IN operator for time periods (Alexei)
 - fixed processing of macro {TRIGGER.VALUE} on 32 bit systems (Alexei)
 - changed priorities of '|' and '&' in trigger expressions (Alexei)
 - fixed no graphs for PostgreSQL (Eugene)
 - fixed and improved eventlog monitoring (Eugene)
 - improved not supported values processing (Eugene)
 - fixed processing of user parameters and remote commands having character '%' (Alexei)

Changes for 1.4.1:

 - fixed processing of 'service_state[*]' (Eugene)
 - fixed PostgreSQL database upgrade script (Alexei)
 - adde support of non standard PostgreSQL & MySQL ports (Eugene)
 - fixed compilation of ZABBIX server under HP-UX (Alexei)
 - fixed upgrade of maps without backgrounds (Alexei)
 - improved UserParameters for Win32 (Eugene)
 - fixed location of the manual and added link to support (Alexei)
 - check timeouted item only after 4*delay seconds (Alexei)
 - improved UserParameters for Win32 (Eugene)
 - fixed several issues in housekeeper (Alexei) 