@@ -9,6 +9,7 @@ Changes for 1.5:
 
 Changes for 1.4.2:
 
+ - fixed agent library dependencies (Eugene)
  - fixed reset button for graph (Eugene)
  - fixed item multiple cleaning on mass update (Eugene)
  - fixed error 'undefined function delete_service' (Eugene)
